# atlas/internal/handler/routes.go
@@ -8,6 +8,7 @@ import (
 
 	auth "github.com/HBUzxl/douyin-mall/atlas/internal/handler/auth"
 	cart "github.com/HBUzxl/douyin-mall/atlas/internal/handler/cart"
+	order "github.com/HBUzxl/douyin-mall/atlas/internal/handler/order"
 	product "github.com/HBUzxl/douyin-mall/atlas/internal/handler/product"
 	user "github.com/HBUzxl/douyin-mall/atlas/internal/handler/user"
 	"github.com/HBUzxl/douyin-mall/atlas/internal/svc"
@@ -47,6 +48,18 @@ func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
 				Method:  http.MethodPost,
 				Path:    "/cart/clear",
 				Handler: cart.ClearCartHandler(serverCtx),
+			},
+		},
+		rest.WithPrefix("/api/v1"),
+	)
+
+	server.AddRoutes(
+		[]rest.Route{
+			{
+				// 获取用户订单
+				Method:  http.MethodGet,
+				Path:    "/order/list",
+				Handler: order.GetUserOrdersHandler(serverCtx),
 			},
 		},
 		rest.WithPrefix("/api/v1"),
